Add stylelintrc and hintrc files

--- a/style.css
+++ b/style.css
@@ -1,89 +1,85 @@
 
-.flex-container
-{
-    display: flex;
-    width: 375px;
-    height: 48px;
-    padding: 4px 24px 4px 12px;
-    align-items: flex-start;
-    gap: 199px;
-    flex-shrink: 0;
-}
-.item
-{
-    color: var(--primary-b-400, #6070FF);
-   text-align: center;
-    font-family: Poppins;
-    font-size: 20px;
-   font-style:bold;
-   font-weight: 700;
-    line-height: 20px; /* 111.111% */
-}
-.flex-container>h1
-{
-    display: inline-flex;
-    padding: 114px 24px;
-     flex-direction: column;
-    align-items: flex-start;
-     gap: 12px;
+.flex-container {
+  display: flex;
+  width: 375px;
+  height: 48px;
+  padding: 4px 24px 4px 12px;
+  align-items: flex-start;
+  gap: 199px;
+  flex-shrink: 0;
 }
 
-.item1
-{
-display: flex;
-width: 327px;
-height: 150px;
-flex-direction: column;
-justify-content: center;
-color: #172B4D;
+.item {
+  color: var(--primary-b-400, #6070ff);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: bold;
+  font-weight: 700;
+  line-height: 20px; /* 111.111% */
+}
 
-font-family:Arial, Helvetica, sans-serif;
-font-size: 45px;
-font-style: normal;
-font-weight: 700;
-line-height: 52px; 
-word-wrap: break-word;
+.flex-container > h1 {
+  display: inline-flex;
+  padding: 114px 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
 }
-.item2
-{
-    width: 327px;
-    height: 146px;
-    color: var(--neutrals-n-600, #344563);
 
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; 
-    word-wrap: break-word;
+.item1 {
+  display: flex;
+  width: 327px;
+  height: 150px;
+  flex-direction: column;
+  justify-content: center;
+  color: #172b4d;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+  word-wrap: break-word;
 }
-.item3
-{
-    color: var(--primary-b-300, #7F8CFF);
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px; 
+
+.item2 {
+  width: 327px;
+  height: 146px;
+  color: var(--neutrals-n-600, #344563);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  word-wrap: break-word;
 }
-.item4
-{
-    width: 170.167px;
-    height: 20px;
+
+.item3 {
+  color: var(--primary-b-300, #7f8cff);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
 }
-.item5
-{
-    width: 100px;
-    height: 50px;
-    flex-shrink: 0;
-    fill: var(--neutrals-n-0, #FFF);
+
+.item4 {
+  width: 170.167px;
+  height: 20px;
 }
-.item11
-{
-    width: 26.462px;
-    height: 4.734px;
-    transform: rotate(-40.767deg);
-    flex-shrink: 0;
-    background: var(--primary-b-400, #6070FF);
+
+.item5 {
+  width: 100px;
+  height: 50px;
+  flex-shrink: 0;
+  fill: var(--neutrals-n-0, #fff);
 }
-    
+
+.item11 {
+  width: 26.462px;
+  height: 4.734px;
+  transform: rotate(-40.767deg);
+  flex-shrink: 0;
+  background: var(--primary-b-400, #6070ff);
+}
+
